--- a/style.css
+++ b/style.css
@@ -8,27 +8,29 @@ body{
     color: rgb(36, 110, 185);
     margin-top: 10%;
 }
-.main-div{
-        margin-top:5%;
+#main-div{
+        margin-top:20%;
 
     background-color: rgb(47, 167, 131);
     width:70%;
-    height: 150;
+    height: 400;
     box-shadow:100px;
     animation: mymove ;
-    transition: 1s;
+    transition-delay: 0;
+    transition: 2s;
 }
 #sub-div{
-    padding-top:2.7%;
+    padding-top:15%;
 }
 h2{
     font-family: "Kanit", sans-serif;
     font-weight: 800;
     font-style: normal;
+    font-size: 100px;
 }
 
 
-  .main-div:hover{
+#main-div:hover{
 width:100%;
 background-color: rgb(55, 200, 154);
 
@@ -36,4 +38,8 @@ background-color: rgb(55, 200, 154);
 
 #jdimage{
     padding-bottom: 10;
+}
+a{
+    text-decoration: none;
+    color:black;
 }
